# Forge-Flow

./: .gitignore  DEPLOYMENT.md  GUIDE.TXT  README.md  TESTING_GUIDE.md
backend/: .env.example  deploy.sh  package.json
backend/src/: executor.ts  index.ts  types.ts  validator.ts
blockchain/: Anchor.toml  README.md  package.json
blockchain/app/: client.ts
blockchain/programs/forgeflow/: Cargo.toml
blockchain/programs/forgeflow/src/: lib.rs
blockchain/tests/: forgeflow.ts
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/Canvas/: WorkflowCanvas.tsx
frontend/src/components/Canvas/NodeTypes/: AINode.tsx  APINode.tsx  ActionNode.tsx  LogicNode.tsx  TriggerNode.tsx
frontend/src/components/Navbar/: Navbar.tsx
frontend/src/components/Providers/: SolanaProvider.tsx  ToastProvider.tsx
frontend/src/components/Sidebar/: ConfigPanel.tsx  ExecutionHistory.tsx  NodePanel.tsx  WorkflowLibrary.tsx
frontend/src/components/Sidebar/configs/: AIConfig.tsx  APIConfig.tsx  ActionConfig.tsx  LogicConfig.tsx  TriggerConfig.tsx
frontend/src/hooks/: useSolana.ts  useWorkflow.ts
frontend/src/stores/: workflowStore.ts
frontend/src/types/: workflow.ts
frontend/src/utils/: demoWorkflows.ts  nodeExecutor.ts  workflowSerializer.ts
