[package]
name = "forgeflow"
version = "0.1.0"
description = "ForgeFlow - Visual AI Workflow Builder on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "forgeflow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
